--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shoeb/prop",
+    "name": "shoeb/yii2-property",
     "description": "This is a test package",
     "authors": [
         {
